--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@screeny05/kanpai",
+  "name": "kanpai-scraper",
   "version": "0.1.0",
   "description": "Declarative web-scraper.",
   "main": "dist/index.js",
@@ -16,5 +16,16 @@
   "devDependencies": {
     "@types/node": "^12.0.2",
     "@types/parse5-htmlparser2-tree-adapter": "^5.0.1"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/screeny05/kanpai-scraper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/screeny05/kanpai-scraper/issues"
+  },
+  "homepage": "https://github.com/screeny05/kanpai-scraper#readme"
 }
