--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kanpai-scraper",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Declarative web-scraper.",
   "main": "dist/index.js",
   "author": "Sebastian Langer <sl@scn.cx>",
@@ -9,6 +9,7 @@
     "css-select": "^2.0.2",
     "domelementtype": "^1.3.1",
     "map-obj": "^2.0.0",
+    "nearley": "^2.19.0",
     "parse5": "^5.1.0",
     "parse5-htmlparser2-tree-adapter": "^5.1.0",
     "typescript": "^3.4.5"
