--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "kanpai-scraper",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Declarative web-scraper.",
   "main": "dist/index.js",
   "author": "Sebastian Langer <sl@scn.cx>",
   "license": "MIT",
   "dependencies": {
+    "cheerio-select": "^2.1.0",
     "css-select": "^2.0.2",
     "domelementtype": "^1.3.1",
     "map-obj": "^2.0.0",
