--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "kanpai-scraper",
-  "version": "0.2.0",
+  "version": "0.3.2",
   "description": "Declarative web-scraper.",
   "main": "dist/index.js",
   "author": "Sebastian Langer <sl@scn.cx>",
   "license": "MIT",
+  "scripts": {
+    "prepublishOnly": "tsc"
+  },
   "dependencies": {
     "cheerio-select": "^2.1.0",
     "css-select": "^2.0.2",
@@ -12,7 +15,7 @@
     "map-obj": "^2.0.0",
     "parse5": "^5.1.0",
     "parse5-htmlparser2-tree-adapter": "^5.1.0",
-    "typescript": "^3.4.5"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/node": "^12.0.2",
